<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/title_section1" android:title="@string/title_section1"
        android:orderInCategory="95" app:showAsAction="never" />
    <item android:id="@+id/title_section2" android:title="@string/title_section2"
        android:orderInCategory="96" app:showAsAction="never" />
    <item android:id="@+id/title_section3" android:title="@string/title_section3"
        android:orderInCategory="97" app:showAsAction="never" />
    <item android:id="@+id/title_section4" android:title="@string/title_section4"
        android:orderInCategory="98" app:showAsAction="never" />
    <item android:id="@+id/title_section5" android:title="@string/title_section5"
        android:orderInCategory="99" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
